--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/laravel-backpack/filemanager",
     "keywords": ["Laravel", "FileManager"],
     "require": {
-        "backpack/crud": "^4.1|^5.0",
+        "backpack/crud": "^4.1|^5.0|dev-four-one-fork-l9",
         "barryvdh/laravel-elfinder": "^0.4.5"
     },
     "require-dev": {
